[tool.poetry]
name = "codecov-demo"
version = "0.1.0"
description = ""
authors = ["Tarik Zegmott <tzegmott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
