[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.0.1"
authors = [{ name = "shenmishajing", email = "shenmishajing@gmail.com" }]
description = "A template wrapper for pytorch-lightning."
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.8"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules --doctest-glob='*.md' --doctest-continue-on-failure"
testpaths = ["tests", "docs"]
